pipelinefiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cicd
  name: cicd
  namespace: cicd-project
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8081
  selector:
    deploymentconfig: cicd
  type: ClusterIP
